# auto-play

./: .gitignore  Cargo.toml  draft.md  flake.nix  pyproject.toml
auto-play-py/: .gitignore  Cargo.toml  pyproject.toml
auto-play-py/auto_play/: __init__.py  _auto_play.pyi  auto_play_py.pyi
auto-play-py/playground/: demo.py
auto-play-py/src/: lib.rs
examples/: ff14_auto_craft.rs  ff14_crop_templates.rs  ff14_debug_match.rs  ff14_debug_ocr.rs
python/auto_play/: __init__.py
src/: action.rs  lib.rs  main.rs  nav.rs  task.rs
src/actions/: click.rs  click_match_template.rs  mod.rs  press.rs  swipe.rs  task.rs
src/adb/: command.rs  error.rs  host.rs  mod.rs
src/adb/command/: host_service.rs  local_service.rs
src/resource/: mod.rs
src/resource/manifest/: mod.rs  task.rs
test/: .gitignore
