[package]
name = "auto-play"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["packages/*"]

[workspace.dependencies]
ap-adb = { path = "packages/ap-adb" }
ap-controller = { path = "packages/ap-controller" }
ap-cv = { path = "packages/ap-cv" }
image = "0.25.9"
imageproc = "0.25.0"
tracing = "0.1.41"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
color-print = "0.3.7"
async-channel = "2.5.0"

criterion = "0.7.0"

[dependencies]
ap-adb.workspace = true
ap-controller.workspace = true
ap-cv.workspace = true

image.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
anyhow.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.0"
bytes = "1.11.0"
toml = "0.9.8"
zip = "6.0.0"
color-print.workspace = true
reqwest = { version = "0.12.24", features = ["blocking"] }
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }
# rustautogui = "2.5.0"
# windows = { version = "0.61.1", features = []}
# windows-capture = "1.4.3"
# xcap = "0.5.1"
# [workspace]
# members = ["packages/*"]
