[package]
name = "auto-play"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["packages/*"]

[workspace.dependencies]
ap-adb = { path = "packages/ap-adb" }
ap-controller = { path = "packages/ap-controller" }
ap-cv = { path = "packages/ap-cv" }
image = "0.25.9"
imageproc = "0.25.0"
tracing = "0.1.41"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
color-print = "0.3.7"
async-channel = "2.5.0"
criterion = "0.7.0"

[features]
windows = ["ap-controller/windows"]

[lib]
name = "auto_play"
path = "src/lib.rs"

[dependencies]
ap-adb.workspace = true
ap-controller.workspace = true
ap-cv.workspace = true

image.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }