[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "auto-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.maturin]
# 这很重要：告诉 maturin 把编译出来的 `_auto_play.so` 放到 `auto_play` 文件夹里
module-name = "auto_play._auto_play"

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]